[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/icons/Pause_Original.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/Pause_Pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/Pause_Hoover.png" type="Texture" id=4]
[ext_resource path="res://hud/PlayerHUD.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 10
border_color = Color( 0.117647, 0.670588, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_color = Color( 0, 0.580392, 0.486275, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_color = Color( 1, 0.501961, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 10
border_blend = true

[sub_resource type="DynamicFont" id=5]
size = 29
font_data = ExtResource( 1 )

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="PlayerHUDMainPanel" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_bottom = 133.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 125 )
custom_styles/panel = SubResource( 1 )

[node name="PlayerHUDMainContainer" type="HBoxContainer" parent="PlayerHUDMainPanel"]
margin_right = 1920.0
margin_bottom = 123.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 300
alignment = 1

[node name="PlayerHUDLeftContainer" type="VBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer"]
margin_left = 67.0
margin_right = 240.0
margin_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="Separation1" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer"]
margin_top = 1.0
margin_right = 173.0
margin_bottom = 1.0
rect_min_size = Vector2( 160, 0 )

[node name="ScoreElementsContainer" type="HBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer"]
margin_top = 21.0
margin_right = 173.0
margin_bottom = 51.0
custom_constants/separation = 5

[node name="ScoreLabelText" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer/ScoreElementsContainer"]
margin_right = 98.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "SCORE:"

[node name="ScoreLabelNumber" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer/ScoreElementsContainer"]
margin_left = 103.0
margin_right = 173.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"
valign = 1

[node name="LivesElementsContainer" type="HBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer"]
margin_top = 71.0
margin_right = 173.0
margin_bottom = 101.0
custom_constants/separation = 5

[node name="LivesLabelText" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer/LivesElementsContainer"]
margin_right = 86.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "LIVES:"

[node name="LivesLabelNumber" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer/LivesElementsContainer"]
margin_left = 91.0
margin_right = 108.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Separation2" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer"]
margin_top = 121.0
margin_right = 173.0
margin_bottom = 121.0

[node name="PlayerHUDCenterContainer" type="VBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer"]
margin_left = 540.0
margin_right = 826.0
margin_bottom = 123.0
alignment = 1

[node name="Separation5" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer"]
margin_top = 9.0
margin_right = 286.0
margin_bottom = 9.0
rect_min_size = Vector2( 260, 0 )

[node name="PlayerHUDCenterPanel" type="PanelContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer"]
margin_top = 13.0
margin_right = 286.0
margin_bottom = 113.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 160, 100 )
size_flags_vertical = 0
custom_styles/panel = SubResource( 3 )

[node name="TimerElementsContainer" type="HBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer/PlayerHUDCenterPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 283.0
margin_bottom = 90.0
rect_min_size = Vector2( 280, 0 )
custom_constants/separation = 5

[node name="TimerLabelText" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer/PlayerHUDCenterPanel/TimerElementsContainer"]
margin_top = 28.0
margin_right = 93.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "TIMER:"
valign = 1

[node name="TimerLabelNumber" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer/PlayerHUDCenterPanel/TimerElementsContainer"]
margin_left = 98.0
margin_top = 28.0
margin_right = 115.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "0"
valign = 1

[node name="PlayerHUDRightContainer" type="VBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer"]
margin_left = 1126.0
margin_right = 1396.0
margin_bottom = 123.0
grow_horizontal = 0
grow_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="Separation3" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer"]
margin_top = 12.0
margin_right = 270.0
margin_bottom = 12.0
rect_min_size = Vector2( 270, 0 )

[node name="AmmoElementsPanel" type="PanelContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 7 )

[node name="AmmoElementsContainer" type="HBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer/AmmoElementsPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 267.0
margin_bottom = 48.0
custom_constants/separation = 5

[node name="Separation8" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer/AmmoElementsPanel/AmmoElementsContainer"]
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )

[node name="AmmoLabelText" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer/AmmoElementsPanel/AmmoElementsContainer"]
margin_left = 5.0
margin_top = 7.0
margin_right = 98.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "AMMO:"

[node name="AmmoLabelNumber" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer/AmmoElementsPanel/AmmoElementsContainer"]
margin_left = 103.0
margin_top = 7.0
margin_right = 120.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Separation4" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer"]
margin_top = 110.0
margin_right = 270.0
margin_bottom = 110.0

[node name="PanelHUDButtonContainer" type="PanelContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer"]
margin_left = 1696.0
margin_right = 1852.0
margin_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 6 )

[node name="PauseButton" type="TextureButton" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PanelHUDButtonContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 153.0
margin_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 100 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="PlayerHUDCenterPanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 4 )

[node name="PlayerHUDCenterContainer" type="VBoxContainer" parent="PlayerHUDCenterPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 705.0
margin_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10

[node name="Separation6" type="Control" parent="PlayerHUDCenterPanel/PlayerHUDCenterContainer"]
margin_right = 700.0
rect_min_size = Vector2( 700, 0 )

[node name="PlayerMessage" type="Label" parent="PlayerHUDCenterPanel/PlayerHUDCenterContainer"]
margin_top = 10.0
margin_right = 700.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 5 )
text = "USER_MESSAGE_LEVEL"
align = 1
valign = 1

[node name="Separation7" type="Control" parent="PlayerHUDCenterPanel/PlayerHUDCenterContainer"]
margin_top = 55.0
margin_right = 700.0
margin_bottom = 75.0
rect_min_size = Vector2( 700, 20 )

[node name="StartButton" type="Button" parent="PlayerHUDCenterPanel/PlayerHUDCenterContainer"]
margin_top = 85.0
margin_right = 700.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 5 )
text = "START"

[connection signal="pressed" from="PlayerHUDMainPanel/PlayerHUDMainContainer/PanelHUDButtonContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PlayerHUDCenterPanel/PlayerHUDCenterContainer/StartButton" to="." method="_on_StartButton_pressed"]
